# bluesky-cookbook

./: .buildinfo  .gitignore  LICENSE  README.md  convert_all.sh  genindex.html  glossary.html  index.html  noxfile.py  objects.inv  pixi.toml  pyproject.toml  recipes.html  requirements.txt  search.html  searchindex.js  test.py  test.sh
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  glossary.doctree  index.doctree  recipes.doctree
.doctrees/glossary/: flyscanning.doctree
.doctrees/recipes/: test.doctree
.github/workflows/: _nox.yml  _tox.yml  cd.yml  ci.yml  gh-pages.yml
_sources/: index.md.txt
_sources/recipes/: test.md.txt
docs/: conf.py  contributing.md  glossary.md  how-to.md  index.md  recipes.md  tutorials.md
docs/explanations/: document-storage.md
docs/glossary/: flyscanning.md
docs/how-to/: example.md
docs/how-to/example/: demo.ipynb  demo.md
docs/recipes/: how-to.md  tutorials.md
docs/tutorials/: flyscanning.md  getting-started.md
docs/tutorials/flyscanning/: basics.ipynb  basics.md  data-management.md  ex-spec.md  ex-tomo.md  integration.md  json_writer.py  orch-daq.md  plotting.md  sample_simulator.py  setup-epics.md  setup-fw.md  setup-panda.md
docs/tutorials/getting-started/: hello-bluesky.ipynb  hello-bluesky.md  hello-python-and-jupyter.ipynb  hello-python-and-jupyter.md
docs/tutorials/tiled_integration/: main.md  tiled_server.py
explanations/: document-storage.md
glossary/: flyscanning.html  flyscanning.md  glossary-todo.md
recipes/: test.html
