[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesky-cookbook"
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "furo",
    "myst_parser>=0.13",
    "nox",
    "pydata-sphinx-theme>=0.12",
    "sphinx>=4.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx-tags",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox",
    "tox-direct",
]


